# afkttv

./: .gitignore  Cargo.toml  README.md  html_elements.html  tests.js
src/: config.rs  irc.rs  main.rs  socket.rs  util.rs  websocket.rs
src/coinflip/: flipper.rs  mod.rs
src/websocket/: events.rs  irc.rs  mod.rs  socket.rs  util.rs
